fixed layout bug

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,6 @@ button {
 }
 
 input {
-  margin: 5px;
+  margin: 3px;
   padding: 6px;
 }
